# PYTHONEXCERCISES

./: Data_Type_Conversion.py  Stars.py  UserInput.py  pyproject.toml  pytest.ini
String-Excercises/: CharcterCount.py  CountStrings.py  CountVowel.py  ExtractFileExtension.py  LastPositionofSubstring.py  LowercaseFirst.py  MixedString.py  NcharRemoval.py  PartitionURL.py  Set.py  StringBalanceTest.py  StringCount.py  StringReplace.py  StringToChars.py  String_SPLIT.py  URLMatching.py  countofchars.py  stringwithnumbers.py  sumandaverage.py  swapcase.py  test_PlayWright.py
bkp_tests/Pandas-Excercises/: All_Time_Zones_PYTZ.py  ReadGSheets.py
test/: Calculator.py  DATA-DRIVEN.py  Lists.py  PDFComparator.py  PDF_to_Base64.py  PYTEST-Commands.xlsx  Palindrome.py  QR_CodeDecryptor.py  Test-3.xlsx  Test.xlsx  URLMatching.py  company_sales.xlsx  test_Google.py  test_PLAYWright.py  test_Read_Excel.py  test_calc.py  test_codegen.py  test_openpyxl.py
