[project]
name = "pythonproject"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django-qrcode>=0.3",
    "flag>=0.1.1",
    "now>=0.0.6",
    "pillow>=12.3.0",
    "playwright>=1.60.0",
    "pypdf>=6.14.2",
    "pytest>=9.1.0",
    "pytest-xdist==3.8.0",
    "pyzbar>=0.1.9",
    "qrcode>=8.2",
    "tldextract>=5.3.1",
]
addopts = "--browser chromium --browser firefox --browser webkit --git browser-channel msedge"

